apps/orangehrm/base/orangehrm-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orangehrm
  namespace: hrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orangehrm
  template:
    metadata:
      labels:
        app: orangehrm
    spec:
      containers:
        - name: orangehrm
          image: orangehrm/orangehrm:5.8.1
          ports:
            - containerPort: 80
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
