apps/orangehrm/base/orangehrm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orangehrm
  namespace: hrm
spec:
  selector:
    app: orangehrm
  ports:
    - port: 80
      targetPort: 80
