apps/orangehrm/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orangehrm-ingress
  namespace: hrm
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: stepca
spec:
  ingressClassName: traefik
  rules:
    - host: orangehrm.dev.bcp.mindef.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: orangehrm
                port:
                  number: 80
  tls:
    - hosts:
        - orangehrm.dev.bcp.mindef.nl
      secretName: orangehrm-tls
